--- a/frontend-application/src/app/modules/adherent/adherant-layout/adherant-layout.component.html
+++ b/frontend-application/src/app/modules/adherent/adherant-layout/adherant-layout.component.html
@@ -76,7 +76,7 @@
                 <div class="avatar me-3">
                   <img
                     class="avatar-img rounded-circle shadow"
-                    src="http://localhost:8089/freelance/auth/{{
+                    src="http://localhost:8089/bibliotheque/auth/{{
                       userconnect.image
                     }}"
                     alt="avatar"
@@ -97,7 +97,7 @@
               <a
                 class="dropdown-item bg-danger-soft-hover"
                 (click)="logout()"
-                href="/home"
+                href=""
                 ><i class="bi bi-power fa-fw me-2"></i>Sign Out</a
               >
             </li>
